--- a/index.html
+++ b/index.html
@@ -83,12 +83,7 @@
   <div class="container" id="container0">
 
     <!-- MAP IMAGE -->
-    <img id="mapImage" src="Images/Map.jpeg" alt="Map">
-
-    <div id="overlay"></div>
-
-    <!-- INFO IMAGE (hidden) -->
-    <img id="infoImage" src="" alt="">
+    <img id="mapImage" src="Images/crops.jpeg" alt="Map">
 
     <button class="info-area" id="infoarea"
       style="top:10%; left:10%; width:81%; height:75%;">
@@ -192,3 +187,4 @@
 </body>
 
 </html>
+
