--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </button>
 
     <button class="click-area"
-      style="top:90%; left:85%; width:15%; height:5%;"
+      style="top:80%; left:75%; width:15%; height:15%;"
       data-prefix="loc_1">
     </button>
 
@@ -122,7 +122,7 @@
       btn.addEventListener("click", function (e) {
         e.stopPropagation();
         currentPrefix = this.dataset.prefix;
-        if(currentPrefix == "loc_1"){Object.values(switches).forEach(s => s.style.display = "block");switches[0].style.display = "none";}
+        if(currentPrefix == "loc_1"){Object.values(switches).forEach(s => s.style.display = "block");switches.sBack.style.display = "none";}
         else{Object.values(switches).forEach(s => s.style.display = "none");}
         showImage();
       });
@@ -149,11 +149,9 @@
       infoArea.style.display = "block";
       overlay.style.display = "block";
       Object.values(switches).forEach(s => s.style.display = "block");
-      e.stopPropagation();
     }
   </script>
 
 </body>
 
 </html>
-
