--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       cursor: pointer;
       display: none;
       z-index: 4;
+      display : "none";
     }
   </style>
 </head>
@@ -58,22 +59,22 @@
     <img id="mapImage" src="Images/crops.jpeg" alt="Map">
 
     <button class="click-area"
-      style="top:80%; left:54%; width:17%; height:15%;"
+      style="top:90%; left:54%; width:17%; height:5%;"
       data-prefix="crops">
     </button>
 
     <button class="click-area"
-      style="top:80%; left:30%; width:17%; height:15%;"
+      style="top:90%; left:30%; width:17%; height:5%;"
       data-prefix="graves">
     </button>
 
     <button class="click-area"
-      style="top:80%; left:9%; width:15%; height:15%;"
+      style="top:90%; left:9%; width:15%; height:5%;"
       data-prefix="scientist">
     </button>
 
     <button class="click-area"
-      style="top:80%; left:75%; width:15%; height:15%;"
+      style="top:90%; left:75%; width:15%; height:5%;"
       data-prefix="loc_1">
     </button>
 
@@ -155,3 +156,4 @@
 </body>
 
 </html>
+
