--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       btn.addEventListener("click", function (e) {
         e.stopPropagation();
         currentPrefix = this.dataset.prefix;
+        page = 1;
         if(currentPrefix == "loc_1"){Object.values(switches).forEach(s => s.style.display = "block");switches.sBack.style.display = "none";}
         else{Object.values(switches).forEach(s => s.style.display = "none");}
         showImage();
@@ -131,12 +132,15 @@
     document.querySelectorAll(".info-switch").forEach(btn => {
       btn.addEventListener("click", function (e) {
         e.stopPropagation();
-        if(this.dataset.num == "0"){page-=1;currentPrefix = "loc_" + (3 * page).toString();if(page == 4){switches[4].style.display = "block";}}
+        if(this.dataset.num == "0"){page-=1;currentPrefix = "loc_" + (3 * page).toString();}
         else 
         {
-          if(this.dataset.num == "4"){page+=1;currentPrefix = "loc_" + ((3 * page) - 2).toString();if(page == 5){switches[4].style.display = "none";}}
+          if(this.dataset.num == "4"){page+=1;currentPrefix = "loc_" + ((3 * page) - 2).toString();}
           else{currentPrefix = "loc_" + (parseInt(this.dataset.num) * page).toString();}
         }
+
+        if(page == 1){switches.sBack.style.display = "none";}else{switches.sBack.style.display = "block";}
+        if(page == 5){switches.sFoward.style.display = "none";}else{switches.sFoward.style.display = "block";}
 
         showImage();
       });
@@ -155,6 +159,7 @@
 </body>
 
 </html>
+
 
 
 
