--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
     </button>
 
     <button class="info-switch" id="switch-back"
-      style="top:5%; left:85%; width:7%; height:10%;"
+      style="top:5%; left:90%; width:7%; height:10%;"
       data-num="0">
     </button>
 
         <button class="info-switch" id="switch-1"
-      style="top:5%; left:70%; width:10%; height:10%;"
+      style="top:5%; left:70%; width:20%; height:10%;"
       data-num="1">
     </button>
 
@@ -136,7 +136,7 @@
         else 
         {
           if(this.dataset.num == "4"){page+=1;currentPrefix = "loc_" + ((3 * page) - 2).toString();}
-          else{currentPrefix = "loc_" + (parseInt(this.dataset.num) * page).toString();}
+          else{currentPrefix = "loc_" + (parseInt(this.dataset.num) + ((3 * page) - 3)).toString();}
         }
 
         if(page == 1){switches.sBack.style.display = "none";}else{switches.sBack.style.display = "block";}
@@ -159,6 +159,7 @@
 </body>
 
 </html>
+
 
 
 
